@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't change decor's move_block in random maps, this messes item merging.
+Nicolas Weeger 2010-08-07
+
 Fix mover-related crash if in an inventory.
 Nicolas Weeger 2010-08-07
 
